--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 /* Base Classes --------------------------------------------------------*/
 h1, h2, h3, h4, h5 {
     font-family: 'Bebas Neue', sans-serif;
@@ -5,4 +8,25 @@ h1, h2, h3, h4, h5 {
 
 p {
     font-family: 'Abel', sans-serif;
+}
+
+
+/* --------------------------------------------------- */
+/* Bootstrap Components */
+
+/* Navigation */
+
+.nav-link{
+    color: white;
+}
+
+.nav-link.active{
+    color: #E94556;
+}
+
+.card-img{
+    width: 30%;
+    height: 27vh;
+    float: right;
+    margin-bottom: 10px;
 }
