--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,35 @@ p {
 
 .card-img{
     width: 30%;
-    height: 27vh;
+    height: 15vh;
     float: right;
     margin-bottom: 10px;
+}
+
+/* Card */
+
+.right-card{
+    width: 100%;
+    height: 350px;
+}
+
+.card-img{
+    width: 30%;
+    height: 450px;
+    float: right;
+    margin-bottom: 10px;
+}
+
+/* Footer */
+.container, .text-center{
+    margin: auto;
+}
+
+.row .col-4{
+    float:right;
+}
+
+.button-toolbar{
+    margin-top: 50px;
+    float:right;
 }
