--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,153 @@ h1, h2, h3, h4, h5 {
 p {
     font-family: 'Abel', sans-serif;
 }
+
+/*Forms styling-----------------------------------------------------------*/
+/*Sign Up----------*/
+.container-form-su {
+    background-color: #3662D4;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 700px;
+    margin-top: 50px;
+    margin-left: 400px;
+}
+.col-box-form{
+    margin-bottom: 20px;
+    width: 200px;
+    height: 150px;
+    background-color: white;
+    border-radius: 30px;
+    margin-left: 230px;
+}
+
+h2 {
+    text-align: center;
+    color: #333;
+}
+
+.form-group {
+    margin-bottom: 20px;
+    margin-left: 125px;
+}
+
+label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+    width: 400px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+
+}
+
+button-su {
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+    width: 250px;
+    margin-left: 50px;
+    margin-top: 50px;
+
+}
+
+button-su:hover {
+    background-color: #0056b3;
+}
+
+.form-check{
+    margin-left: 125px;
+}
+.link-opacity-75{
+    padding-left: 390px;
+    color: white;
+    margin-top: -100px;
+}
+.forgot-password{
+    padding-top: -400px;
+}
+/*Sign In----------*/
+.container-form-si {
+    background-color: #3662D4;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 700px;
+    margin-top: 50px;
+    margin-left: 400px;
+}
+.col-box-form{
+    margin-bottom: 20px;
+    width: 200px;
+    height: 150px;
+    background-color: white;
+    border-radius: 30px;
+    margin-left: 230px;
+}
+
+h2 {
+    text-align: center;
+    color: #333;
+}
+
+.form-group {
+    margin-bottom: 20px;
+    margin-left: 125px;
+}
+
+label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: px;
+}
+.form-check-label{
+    width: 200px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+    width: 400px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+
+}
+
+button-si {
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+    width: 250px;
+    margin-left: 200px;
+    margin-top: 50px;
+}
+
+button-si:hover {
+    background-color: #0056b3;
+}
+
+.form-check{
+    margin-left: 125px;
+}
+.link-opacity-75{
+    padding-left: 390px;
+    color: white;
+    margin-top: -100px;
+}
+.forgot-password{
+    padding-top: -400px;
+}
