--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,162 @@
 /* Base Classes --------------------------------------------------------*/
+body {
+    background-color: #1E1E1E;
+}
+
 h1, h2, h3, h4, h5 {
     font-family: 'Bebas Neue', sans-serif;
 }
 
 p {
     font-family: 'Abel', sans-serif;
+}
+
+footer {
+    height: 20vh;
+    background-color: #3662D4;
+}
+
+/* ------------------------------------------------------------ */
+/* Bootstrap classes */
+.active {
+    color: #E94556;
+}
+
+.carousel-item {
+    overflow: none;
+}
+
+/* ------------------------------------------------ */
+/* Created Class */
+/* Landing Page */
+.nav {
+    margin-top: 2vh;
+}
+
+.profile {
+    width: 3vw;
+    height: 6vh;
+    background-color: gainsboro;
+    border-radius: 50%;
+}
+
+.slide-img {
+    height: 100vh;
+    /* margin: 0 auto; */
+    left: 0px;
+    top: 0px;
+    z-index: 1;
+    float: right;
+}
+
+.overlay {
+    width: 50vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin-top: -100vh;
+    z-index: 3;
+    float: left;
+    background: #3662D4;
+    background: linear-gradient(0deg,#3662D4 0%, rgba(54,98,212,0.62) 60%, rgba(54,98,212,0) 100%);
+    background: -webkit-linear-gradient(0deg,#3662D4 0%, rgba(54,98,212,0.62) 60%, rgba(54,98,212,0) 100%);
+    background: -moz-linear-gradient(0deg,#3662D4 0%, rgba(54,98,212,0.62) 60%, rgba(54,98,212,0) 100%);
+    color: #ffffff;
+    padding-left: 15vw;
+    padding-top: 20vh;
+}
+
+.title {
+    font-size: 7vw;
+}
+
+.description, .cast {
+    font-size: 1.5vw;
+    margin-bottom: 2vw;
+}
+
+#button-group {
+    width: 20vw;
+}
+
+#info {
+    height: 3vw;
+    width: 7vw;
+    text-align: center;
+    float: left;
+    margin-right: 1vw;
+    background-color: #FFE960;
+    color: #000000;
+    padding-top: 1.3vh;
+    border-radius: 20px;
+}
+
+#info h3 {
+    font-size: 1.5vw;
+}
+
+#info:hover {
+    cursor: pointer;
+}
+
+#watchlist {
+    height: 3vw;
+    width: 10vw;
+    text-align: center;
+    float: left;
+    background-color: #89DE56;
+    color: #000000;
+    padding-top: 1.3vh;
+    border-radius: 20px;
+}
+
+#watchlist h3 {
+    font-size: 1.5vw;
+}
+
+#watchlist:hover {
+    cursor: pointer;
+}
+
+.profile:hover {
+    cursor: pointer;
+}
+
+.card {
+    margin-top: 5vh;
+}
+
+.card-img-top {
+    height: 50vh;
+}
+
+/* Library page */
+#filter-group {
+    height: 10vh;
+    margin-top: 10vh;
+    margin-bottom: 1vh;
+}
+
+
+.filter-button {
+    width: 10vw;
+    height: 3vw;
+    background-color: #FFE960;
+    float: left; 
+    margin-right: 2vw;
+    padding-left: 3vw;
+    padding-top: 0.5vw;
+    border-radius: 5px;
+}
+
+.library-row {
+    margin-top: 5vh;
+    /* float: left; */
+    margin-bottom: 5vh;
+}
+
+#best-movies {
+    color: #ffffff;
+    font-size: 4vw;
+    margin-top: 5vh;
+    margin-bottom: 2vh;
 }
