--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
 /* Base Classes --------------------------------------------------------*/
+body{
+    background-color: #1E1E1E;
+}
+
 h1, h2, h3, h4, h5 {
     font-family: 'Bebas Neue', sans-serif;
 }
@@ -58,3 +62,27 @@ p {
     margin-top: 50px;
     float:right;
 }
+
+footer {
+    height: 20vh;
+    background-color: #3662D4;
+}
+
+/* ------------------------------------------------------------ */
+/* Bootstrap classes */
+.active {
+    color: #E94556;
+}
+
+/* ------------------------------------------------ */
+/* Created Classes */
+
+
+
+/* ------------------------------------------------ */
+/*  Watch-list Styling  */
+
+
+
+/* ------------------------------------------------ */
+/*  Individual Movie Styling  */
