--- a/css/main.css
+++ b/css/main.css
@@ -28,19 +28,11 @@ p {
     color: #E94556;
 }
 
-.card-img{
-    width: 30%;
-    height: 15vh;
-    float: right;
-    margin-bottom: 10px;
+.nav-brand{
+    margin: auto;
 }
 
 /* Card */
-
-.right-card{
-    width: 100%;
-    height: 350px;
-}
 
 .card-img{
     width: 30%;
@@ -54,17 +46,13 @@ p {
     margin: auto;
 }
 
-.row .col-4{
-    float:right;
-}
-
 .button-toolbar{
     margin-top: 50px;
     float:right;
 }
 
 footer {
-    height: 20vh;
+    height: 15vh;
     background-color: #3662D4;
 }
 
@@ -82,7 +70,59 @@ footer {
 /* ------------------------------------------------ */
 /*  Watch-list Styling  */
 
+.right-card{
+    width: 100%;
+    height: 450px;
+    float: left;
+}
 
+.watchlist-card-img{
+    width: 60%;
+}
+
+
+@media (min-width :768px){
+    .watchlist-card-img {
+        width: auto;
+        height: 350px;
+    }
+}
+
+@media (min-width :1200px){
+    .watchlist-card-img {
+        width: auto;
+        height: 450px;
+    }
+}
 
 /* ------------------------------------------------ */
 /*  Individual Movie Styling  */
+
+@media (min-width :768px){
+    .right-img {
+        width: auto;
+        height: 250px;
+    }
+}
+
+@media (min-width :1200px){
+    .right-img {
+        width: auto;
+        height: 350px;
+    }
+}
+
+
+@media (min-width :768px){
+    .side-card-img {
+        width: auto;
+        height: 350px;
+    }
+}
+
+@media (min-width :1200px){
+    .side-card-img {
+        width: auto;
+        height: 450px;
+    }
+}
