--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,8 @@ footer {
         width: auto;
         height: 450px;
     }
-=======
+}
+/* ======= */
 .carousel-item {
     overflow: none;
 }
@@ -284,7 +285,6 @@ footer {
 
 /*Forms styling-----------------------------------------------------------*/
 /*Sign Up----------*/
-<<<<<<< HEAD
 
 .container-form-su {
     background-color: #3662D4;
@@ -315,7 +315,6 @@ footer {
     padding-top: 5px;
 }
 
-=======
 /* Base Classes --------------------------------------------------------*/
 h1, h2, h3, h4, h5 {
     font-family: 'Bebas Neue', sans-serif;
@@ -326,22 +325,18 @@ p {
 }
 
 /* Common Styles ------------------------------------------------------*/
->>>>>>> jade
 .form-group {
     margin-bottom: 20px;
     margin-left: 125px;
 }
 
 label {
-<<<<<<< HEAD
     font-weight: bold;
     display: block;
     margin-bottom: 5px;
-}
-=======
+/* } */
     font-size: 16px; /* Reduce font size for labels */
   }
->>>>>>> jade
 
 input[type="text"],
 input[type="email"],
@@ -352,9 +347,7 @@ input[type="password"] {
     border-radius: 5px;
 }
 
-<<<<<<< HEAD
-button-su {
-=======
+/* button-su {} */
 .form-check {
     margin-left: 5px;
     margin-top: 10px;
@@ -369,7 +362,6 @@ button-su {
 /* Common Button Styles ------------------------------------------------*/
 .button-su,
 .button-si {
->>>>>>> jade
     background-color: white;
     color: black;
     border: none;
@@ -385,7 +377,6 @@ button-su {
 .button-si:hover {
     background-color: #0056b3;
 }
-<<<<<<< HEAD
 .form-check{
     margin-left: 125px;
 }
@@ -400,11 +391,9 @@ button-su {
 
 
 /*Sign In-------------------------------------------------*/
-=======
 
 /* Form Container Styles ------------------------------------------------*/
 .container-form-su,
->>>>>>> jade
 .container-form-si {
     background-color: #3662D4;
     border-radius: 10px;
@@ -428,7 +417,6 @@ button-su {
     background-color: #3662D4;
 }
 
-<<<<<<< HEAD
 .form-group {
     margin-bottom: 20px;
     margin-left: 125px;
@@ -444,7 +432,6 @@ input[type="password"] {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-=======
 
 h2,h3,h1 {
     text-align: center;
@@ -452,12 +439,10 @@ h2,h3,h1 {
     padding-top: 5px;
     
 }
->>>>>>> jade
 
 .forgot-password {
     padding-top: -400px;
 }
-<<<<<<< HEAD
 button-si {
     background-color: white;
     color: black;
@@ -482,6 +467,4 @@ button-si:hover {
     padding-left: 390px;
     color: white;
     margin-top: -100px;
-=======
-
->>>>>>> jade
+}}
