--- a/css/main.css
+++ b/css/main.css
@@ -181,21 +181,21 @@ footer {
 }
 
 .title {
-    font-size: 7vw;
+    font-size: 6vh;
 }
 
 .description, .cast {
-    font-size: 1.5vw;
+    font-size: 2vh;
     margin-bottom: 2vw;
 }
 
 #button-group {
-    width: 20vw;
+    width: 20vh;
 }
 
 #info {
-    height: 3vw;
-    width: 7vw;
+    height: 5.5vh;
+    width: 15vh;
     text-align: center;
     float: left;
     margin-right: 1vw;
@@ -203,10 +203,11 @@ footer {
     color: #000000;
     padding-top: 1.3vh;
     border-radius: 20px;
+    margin-bottom: 1vh;
 }
 
 #info h3 {
-    font-size: 1.5vw;
+    font-size: 2.5vh;
 }
 
 #info:hover {
@@ -214,8 +215,8 @@ footer {
 }
 
 #watchlist {
-    height: 3vw;
-    width: 10vw;
+    height: 5.5vh;
+    width: 19vh;
     text-align: center;
     float: left;
     background-color: #89DE56;
@@ -225,7 +226,7 @@ footer {
 }
 
 #watchlist h3 {
-    font-size: 1.5vw;
+    font-size: 2.5vh;
 }
 
 #watchlist:hover {
