--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,8 @@ footer {
 
 .title {
     font-size: 6vh;
+    text-align: left;
+    color: #FFFFFF;
 }
 
 .description, .cast {
@@ -270,6 +272,14 @@ footer {
     border-radius: 5px;
 }
 
+.filter-button:hover {
+    cursor: pointer;
+}
+
+.filter-button h3 {
+    text-align: left;
+}
+
 .library-row {
     margin-top: 5vh;
     /* float: left; */
@@ -281,6 +291,7 @@ footer {
     font-size: 4vw;
     margin-top: 5vh;
     margin-bottom: 2vh;
+    text-align: left;
 }
 
 
