--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ footer {
         width: auto;
         height: 450px;
     }
-=======
+
 .carousel-item {
     overflow: none;
 }
@@ -425,3 +425,49 @@ button-si:hover {
     padding-left: 390px;
     color: white;
     margin-top: -100px;
+}
+
+footer {
+    margin: 0;
+    padding: 20px 0;
+    background-color: #333;
+    color: #fff;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.footer-logo img {
+    width: 50px;
+    height: 50px;
+    border-radius: 20%;
+}
+
+.footer-logo h2 {
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+.footer-links ul, .footer-social ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-links li, .footer-social li {
+    margin-bottom: 10px;
+}
+
+.footer-links a, .footer-social a {
+    color: #fff;
+    text-decoration: none;
+}
+
+/* Style the links with a hover effect */
+.footer-links a:hover, .footer-social a:hover {
+    text-decoration: underline;
+}
