--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ label {
     padding: 10px 20px;
     cursor: pointer;
     width: 70%;
-    margin-left: 50px;
+    margin-left: 150px;
     margin-top: 20px;
 }
 
@@ -344,7 +344,7 @@ label {
     border-radius: px;
     padding: 30px 100px;
     cursor: pointer;
-    width: 100%;
+    width: 110%;
     margin-left: -50px;
     margin-top: 20px;
     margin-bottom: -150px;
@@ -361,8 +361,8 @@ label {
 }
 
 .or-text{
-    padding-left: 170px;
     padding-top: 10px;
+    text-align: center;
 }
 .button-si:hover {
     background-color: white;
@@ -374,7 +374,7 @@ label {
 
 /* Form Container Styles ------------------------------------------------*/
 .container-form-su {
-    background-color: #0056b3;
+    background: linear-gradient(to bottom, #0056b3, #89DE56);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
