responsiveness last updates, read me files updates

--- a/css/main.css
+++ b/css/main.css
@@ -781,3 +781,4 @@ footer {
 /* Style the links with a hover effect */
 .footer-links a:hover, .footer-social a:hover {
     text-decoration: underline;
+}
