--- a/css/main.css
+++ b/css/main.css
@@ -347,7 +347,7 @@ p {
 }
 
 footer {
-    height: 15vh;
+    height: 30vh;
     background-color: #3662D4;
 }
 
@@ -496,7 +496,7 @@ footer {
     margin-right: 1vw;
     background-color: #FFE960;
     color: #000000;
-    padding-top: 12px;
+    padding-top: 18px;
     border-radius: 20px;
     margin-bottom: 1vh;
 }
@@ -511,12 +511,12 @@ footer {
 
 #watchlist {
     height: 60px;
-    width: 175px;
+    width: 200px;
     text-align: center;
     float: left;
     background-color: #89DE56;
     color: #000000;
-    padding-top: 1.3vh;
+    padding-top: 18px;
     border-radius: 20px;
 }
 
@@ -737,6 +737,14 @@ footer {
 }
 
 
+/* --------------------------------------------------------------------- */
+#empty{
+    color: white;
+    margin-top: 30vh;
+    margin-bottom: 60vh;
+    font-size: 74px;
+}
+
 /*Forms styling-----------------------------------------------------------*/
 /*Sign Up----------*/
 /* Common Styles ------------------------------------------------------*/
@@ -880,13 +888,6 @@ footer {
     padding-left: 390px;
     color: white;
     margin-top: -100px;
-}
-
-footer {
-    margin: 0;
-    padding: 20px 0;
-    background-color: #333;
-    color: #fff;
 }
 
 .footer-content {
